--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.2",
     "@nuxtjs/tailwindcss": "^6.1.2",
+    "daisyui": "^2.37.0",
     "nuxt": "3.0.0-rc.12"
   },
   "dependencies": {
