--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "3.0.0-rc.12"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@vueuse/nuxt": "^9.4.0",
     "config": "^3.3.8",
     "dotenv": "^16.0.3",
