--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/nuxt": "^9.4.0",
     "config": "^3.3.8",
     "dotenv": "^16.0.3",
-    "nuxt-proxy": "^0.3.2"
+    "nuxt-proxy": "^0.3.2",
+    "vue-recaptcha-v3": "^2.0.1"
   }
 }
