--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@nuxtjs/apollo": "^5.0.0-alpha.2",
     "@nuxtjs/tailwindcss": "^6.1.2",
     "daisyui": "^2.37.0",
-    "nuxt": "3.0.0-rc.12"
+    "nuxt": "3.0.0-rc.12",
+    "nuxt-icon": "^0.1.7"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
