--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "next.cytoid.io",
+  "version": "2.0.0",
+  "description": "Cytoid is a music game where you can create, share and play your own levels! Powered by community, with many dedicated creators, Cytoid provides a huge variety of musical genres to enjoy and a diverse range of gameplay design.",
+  "author": "Cytoid",
   "private": true,
   "scripts": {
     "build": "nuxt build",
