--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,6 @@
   ],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.pathMatcher": "{locale}/{namespaces}.json",
-  "i18n-ally.namespace": true
+  "i18n-ally.namespace": true,
+  "i18n-ally.sourceLanguage": "en"
 }
