--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.3",
-    "@tailwindcss/typography": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/marked": "^4.0.7",
+    "@types/sanitize-html": "^2.6.2",
     "@vueuse/nuxt": "^9.4.0",
     "config": "^3.3.8",
     "dotenv": "^16.0.3",
+    "marked": "^4.2.2",
     "nuxt-proxy": "^0.3.2",
+    "sanitize-html": "^2.7.3",
     "vue-recaptcha-v3": "^2.0.1"
   }
 }
