--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.3",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/config": "^3.3.0",
     "@types/marked": "^4.0.7",
     "@types/sanitize-html": "^2.6.2",
     "@vueuse/nuxt": "^9.4.0",
