--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@nuxtjs/apollo": "^5.0.0-alpha.2",
     "@nuxtjs/tailwindcss": "^6.1.2",
     "daisyui": "^2.37.0",
-    "nuxt": "3.0.0-rc.13"
+    "nuxt": "^3.0.0"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.3",
