--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,12 @@
     "daisyui",
     "demi",
     "dompurify",
+    "gameplay",
     "hitech",
     "iconify",
     "intlify",
     "kidonng",
+    "leaderboard",
     "nocheck",
     "nuxt",
     "nuxtjs",
@@ -21,6 +23,8 @@
     "pnpm",
     "recaptcha",
     "sess",
+    "signout",
+    "storyboarder",
     "tailwindcss",
     "teages",
     "unocss",
