--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "dev:local": "cross-env NODE_APP_INSTANCE=local nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -15,7 +16,8 @@
     "@nuxtjs/apollo": "^5.0.0-alpha.2",
     "@nuxtjs/tailwindcss": "^6.1.2",
     "daisyui": "^2.37.0",
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.0-1",
