--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.2",
     "@nuxtjs/tailwindcss": "^6.1.2",
+    "cross-env": "^7.0.3",
     "daisyui": "^2.37.0",
-    "nuxt": "^3.1.2",
-    "cross-env": "^7.0.3"
+    "nuxt": "^3.5.2"
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.0-1",
