--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Cytoid is a music game where you can create, share and play your own levels! Powered by community, with many dedicated creators, Cytoid provides a huge variety of musical genres to enjoy and a diverse range of gameplay design.",
   "author": "Cytoid",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -21,7 +22,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.0-1",
-    "@nuxtjs/i18n": "^8.0.0-beta.3",
+    "@nuxtjs/i18n": "^8.0.0-beta.12",
     "@tailwindcss/typography": "^0.5.8",
     "@types/config": "^3.3.0",
     "@types/marked": "^5.0.0",
