--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/apollo": "^5.0.0-alpha.2",
-    "@nuxtjs/tailwindcss": "^6.1.2",
+    "@nuxtjs/apollo": "^5.0.0-alpha.6",
+    "@nuxtjs/i18n": "^8.0.0-beta.12",
+    "@nuxtjs/tailwindcss": "^6.7.0",
     "cross-env": "^7.0.3",
     "daisyui": "^3.0.3",
     "nuxt": "^3.5.2"
   },
   "dependencies": {
-    "@nuxtjs/google-fonts": "^3.0.0-1",
-    "@nuxtjs/i18n": "^8.0.0-beta.12",
+    "@nuxtjs/google-fonts": "^3.0.1",
     "@tailwindcss/typography": "^0.5.8",
     "@types/config": "^3.3.0",
     "@types/marked": "^5.0.0",
